--- a/man/icewmtray.pod
+++ b/man/icewmtray.pod
@@ -6,13 +6,20 @@
 
 =head1 SYNOPSIS
 
-B<icewmtray> [I<OPTIONS>]
+B<> B<icewmtray> [I<OPTIONS>]
+ B<icewmtray> {B<-h>|B<--help>} [I<OPTIONS>]
+ B<icewmtray> {B<-V>|B<--version>}
+ B<icewmtray> {B<-C>|B<--copying>}
 
 =head1 DESCRIPTION
 
 =head1 OPTIONS
 
-=head2 GENERAL OPTIONS
+=head2 COMMAND OPTIONS
+
+Command options are mutually exclusive.  Only one command option can be
+specified per invocation.  If no command option is specified, argument
+parsing and processing is performed.
 
 =over
 
@@ -27,6 +34,30 @@ Print the program version to F<stdout> and exit.
 =item B<-C>, B<--copying>
 
 Print copying permissions to F<stdout> for the program and exit.
+
+=back
+
+=head2 GENERAL OPTIONS
+
+=over
+
+=item B<-n>, B<--notify>
+
+Specifies that B<icewmtray> is to notify its parent process by sending
+the B<SIGUSR1> signal.
+
+=item B<-c>, B<--config> I<FILENAME>
+
+Specifies the configuration file to use.
+
+=item B<-t>, B<--theme> I<THEME>
+
+Specifies an override theme to use.
+
+=item B<--debug>
+
+Specifies that debugging is to be turned on.  B<icewmtray> must have
+been compiled with debugging for this option to have an effect.
 
 =back
 
