--- a/man/icewm-winoptions.pod
+++ b/man/icewm-winoptions.pod
@@ -2,33 +2,377 @@
 
 =head1 NAME
 
- icewm-winoptions - icewm winoptions configuration file
+ icewm-winoptions - IceWM window options configuration file
 
 =head1 SYNOPSIS
 
-F<$HOME/.icewm/winoptions>
+F<> F<$XDG_CONFIG_HOME/icewm/winoptions>
+ F<$HOME/.icewm/winoptions>
+ F</usr/share/icewm/winoptions>
 
 =head1 DESCRIPTION
 
+The IceWM window options configuration file is used to configure
+settings for individual application windows.  The window options that
+are established by this file when L<icewm(1)> starts can be overridden
+while running using the L<icesh(1)> or L<icewmhints(1)> utilities.
+
 =head1 FORMAT
+
+Each line in the file must be in one of the following formats:
+
+B<> I<CLASS>B<.>I<NAME>B<.>I<ROLE>B<.>I<OPTION>B<:> I<VALUE>
+ I<CLASS>B<.>I<NAME>B<.>I<OPTION>B<:> I<VALUE>
+ I<CLASS>B<.>I<ROLE>B<.>I<OPTION>B<:> I<VALUE>
+ I<NAME>B<.>I<ROLE>B<.>I<OPTION>B<:> I<VALUE>
+ I<CLASS>B<.>I<OPTION>B<:> I<VALUE>
+ I<NAME>B<.>I<OPTION>B<:> I<VALUE>
+ I<ROLE>B<.>I<OPTION>B<:> I<VALUE>
+
+Where the fields are defined as follows:
+
+=over
+
+=item I<CLASS>
+
+The resource class portion of the ICCCM B<WM_CLASS> property for the
+window.
+
+=item I<NAME>
+
+The resource name portion of the ICCCM B<WM_CLASS> property for the
+window.
+
+=item I<ROLE>
+
+The resource name portion of the ICCCM B<WM_WINDOW_ROLE> property for
+the window.
+
+=item I<OPTION>: I<VALUE>
+
+One of the options and values described below under L</OPTIONS>.
+
+=back
+
+Note that it is possible that the B<WM_WINDOW_ROLE> may contain a period
+(C<.>).  When it does, the period should be escaped by a single
+backslash when specifying the I<ROLE> in the file.
+
+=head1 OPTIONS
+
+The options and values described in the format, above, consist of an
+option name, I<OPTION> followed by a semicolon (C<:>) a space (C< >) and
+an allowable value for the option, I<VALUE>.  The available options are
+as follows:
+
+=head2 GENERAL OPTIONS
+
+The following option control general characteristics of windows:
+
+=over
+
+=item B<icon>: I<NAME> (default: none)
+
+Specifies the icon name for the window.  I<NAME> is the name of the
+icon.
+
+=item B<workspace>: I<WORKSPACE> (default: current)
+
+Specifies the default workspace for the window.  I<WORKSPACE> is the
+workspace number counting from zero (0).
+
+=item B<layer>: {B<Desktop>|B<Below>|B<Normal>|B<OnTop>|B<Dock>|B<AboveDock>|B<Menu>|I<NUMBER>} (default: 4)
+
+Specifies the default layer for the window.  Layer can be one of the
+following strings or a number from zero (0) to fifteen (15):
+
+B<>  B<Desktop>     (0)  Desktop window.
+  B<Below>       (2)  Below the default layer.
+  B<Normal>      (4)  Default layer for windows.
+  B<OnTop>       (6)  Above the default layer.
+  B<Dock>        (8)  Docked windows at edge of screen.
+  B<AboveDock>  (10)  Windows above the dock.
+  B<Menu>       (12)  Windows above the dock.
+
+=item B<geometry> I<geometry> (default: WM_SIZE_HINTS)
+
+The default geometry for the window.  This geometry should be specified
+in a format that can be parsed by L<XParseGeometry(3)>:
+
+ [=][<width>{xX}<height>][{+-}<xoffset>{+-}<yoffset>]
+
+=item B<tray>: {B<Ignore>|B<Minimized>|B<Exclusive>|I<NUMBER>} (default: 0)
+
+The default tray option for the window.  This affects both the tray and
+the task pane.  Tray can be one of the following strings or a number
+from zero (0) to two (2):
+
+B<>  B<Ignore>     (0)  No icon added to tray.
+  B<Minimized>  (1)  Add to tray, no task when minimized.
+  B<Exclusive>  (2)  Add to tray, no task button.
+
+=back
+
+=head2 FUNCTION OPTIONS
+
+The following options control the ability to take an action on the
+window:
+
+=over
+
+=item B<fMove>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be moved.
+
+=item B<fResize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be resized.
+
+=item B<fClose>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be closed.
+
+=item B<fMinimize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be minimized.
+
+=item B<fMaximize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be maximized.
+
+=item B<fHide>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be hidden.
+
+=item B<fRollup>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window cannot be shaded.
+
+=back
+
+=head2 DECOR OPTIONS
+
+The following options control the decorations on the window:
+
+=over
+
+=item B<dTitleBar>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a title bar.
+
+=item B<dSysMenu>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a system menu.
+
+=item B<dBorder>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a border.
+
+=item B<dResize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have resize grips.
+
+=item B<dClose>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a close button.
+
+=item B<dMinimize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a minimize button.
+
+=item B<dMaximize>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a maximize button.
+
+=item B<dHide>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a hide button.
+
+=item B<dRollup>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a shade button.
+
+=item B<dDepth>: {B<0>|B<1>} (default: 1)
+
+When set to 0, the window will not have a depth button.
+
+=back
+
+=head2 FEATURE OPTIONS
+
+=over
+
+=item B<allWorkspaces>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will be visible on all workspaces.
+
+=item B<ignoreTaskBar>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will not appear in the task bar.
+
+=item B<noIgnoreTaskBar>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will appear in the task bar.
+
+=item B<ignoreWinList>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will not appear in the window list.
+
+=item B<ignoreQuickSwitch>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will not be accessible using the quick-switch
+feature (i.e C<Alt+Tab>).
+
+=item B<fullKeys>: {B<0>|B<1>} (default: 0)
+
+When set to 1, L<icewm(1)> will leave more keys available to the
+application.
+
+=item B<noFocusOnAppRaise>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will not automatically get focus as the
+application raises it.
+
+=item B<ignoreNoFocusHint>: {B<0>|B<1>} (default: 0)
+
+When set to 1, L<icewm(1)> will focus the window even if the window does
+not handle input (according to ICCCM procedures).
+
+=item B<ignorePositionHint>: {B<0>|B<1>} (default: 0)
+
+When set to 1, L<icewm(1)> will position the window automatically
+regardless of whether the application specifies the window position
+(using ICCCM procedures).
+
+=item B<doNotCover>: {B<0>|B<1>} (default: 0)
+
+When set to 1, the window will limit the workspace available for regular
+applications.  The window has to also be sticky to make this work.
+
+=item B<doNotFocus>: {B<0>|B<1>} (default: 0)
+
+When set to 1, do not focus the window even when it is capable of taking
+keyboard focus.
+
+=item B<startFullscreen>: {B<0>|B<1>} (default: 0)
+
+When set to 1, start the window in the full-screen mode.
+
+=item B<startMinimized>: {B<0>|B<1>} (default: 0)
+
+When set to 1, start the window in the minimized state.
+
+=item B<startMaximized>: {B<0>|B<1>} (default: 0)
+
+When set to 1, start the window in the maximized state.
+
+=item B<startMaximizedVert>: {B<0>|B<1>} (default: 0)
+
+When set to 1, start the window in the maximized vertical state.
+
+=item B<startMaximizedHorz>: {B<0>|B<1>} (default: 0)
+
+When set to 1, start the window in the maximized horizontal state.
+
+=item B<nonICCCMconfigureRequest>: {B<0>|B<1>} (default: 0)
+
+When set to 1, do not issue ICCCM compliant configuration requests to
+the application.
+
+=item B<forcedClose>: {B<0>|B<1>} (default: 0)
+
+When set to 1 and the application had not registered
+B<WM_DELETE_WINDOW>, a close confirmation dialog will not be offered
+upon closing the window.
+
+=item B<noFocusOnMap>: {B<0>|B<1>} (default: 0)
+
+When set to 1, do not focus the window when it is mapped.
+
+=item B<ignoreUrgentHint>: {B<0>|B<1>} (default: 0)
+
+When set to 1, ignore urgent hints (described in ICCCM).
+
+=item B<appTakesFocus>: {B<0>|B<1>} (default: 0)
+
+When set to 1, L<icewm(1)> will not give the focus to the application
+but will expect the application to take focus for itself.
+
+=back
 
 =head1 EXAMPLES
 
+Following is the example window options file that ships with L<icewm(1)>
+and typically installs to F</usr/share/icewm/winoptions>.
+
+  # This is an example for IceWM's window options file.
+  #
+  # Place your variants in @CFGDIR@ or in $HOME/.icewm
+  # since modifications to this file will be discarded when you
+  # (re)install icewm.
+  
+  xterm.icon: xterm
+  rxvt.icon: xterm
+  nxterm.icon: xterm
+  fte.icon: fte
+  emacs.Emacs.icon: emacs
+  AWTapp.icon: java
+  # workaround for XV window repositioning problems
+  xv.nonICCCMconfigureRequest: 1
+  xeyes.ignoreWinList: 0
+  xeyes.ignoreTaskBar: 1
+  xeyes.allWorkspaces: 1
+  xeyes.dTitleBar: 0
+  xeyes.dBorder: 0
+  xeyes.dSysMenu: 0
+  xeyes.dResize: 0
+  xeyes.dClose: 0
+  xeyes.dMinimize: 0
+  xeyes.dMaximize: 0
+  xeyes.ignoreNoFocusHint: 1
+  
+  XClock.ignoreNoFocusHint: 1
+  Vim.icon: vim
+  
+  applix.ignoreNoFocusHint: 1
+  XDdts.noFocusOnAppRaise: 1
+  Wingz.noFocusOnAppRaise: 1
+  WingzPro.noFocusOnAppRaise: 1
+  
+  gkrellm.Gkrellm.allWorkspaces: 1
+  gkrellm.Gkrellm.ignoreTaskBar: 1
+  gkrellm.Gkrellm.layer: Below
+  #gkrellm.Gkrellm.doNotCover: 1
+  
+  MainWindow.licq.allWorkspaces: 1
+  MainWindow.licq.ignoreQuickSwitch: 1
+  MainWindow.licq.ignoreWinList: 1
+  MainWindow.licq.layer: Below
+  #MainWindow.licq.doNotCover: 1
+
 =head1 FILES
 
+Locations for the window options file are as follows:
+
+F<>    F<$XDG_CONFIG_HOME/icewm/winoptions>
+    F<$HOME/.icewm/winoptions>
+    F</usr/share/icewm/winoptions>
+
 =head1 SEE ALSO
+
+L<icewm(1)>,
+L<icesh(1)>,
+L<icewmhints(1)>,
+L<XParseGeometry(3)>.
 
 =head1 AUTHOR
 
 Brian Bidulock L<mailto:bidulock@openss7.org>.
 
-See B<--copying> for full copyright notice and copying permissions.
-
 =head1 LICENSE
 
 B<IceWM> is licensed under the GNU Library General Public License.
-See the F<COPYING> file in the distribution or use the B<--copying> flag
-to display copying permissions.
+See the F<COPYING> file in the distribution.
 
 =cut
 
